--- a/templates/approve/approve_sheet.html
+++ b/templates/approve/approve_sheet.html
@@ -7,6 +7,23 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
+                                    <span style="color: red;">*</span><label>&nbsp;发布日期</label>
+                                    <input type="text" class="form-control" value="{{ approve_sheet.publish_date }}"
+                                           readonly>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <span style="color: red;">*</span><label>&nbsp;开始发布时间</label>
+                                    <input type="text" class="form-control" value="{{ approve_sheet.publish_time }}"
+                                           readonly>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
                                     <span style="color: red;">*</span><label>&nbsp;发布项目</label>
                                     <input type="text" class="form-control" value="{{ approve_sheet.group_name }}"
                                            readonly>
@@ -23,7 +40,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <span style="color: red;">*</span><label>&nbsp;TAPD URL</label>
+                                    <span style="color: red;">*</span><label>&nbsp;测试人</label>
                                     <input type="text" class="form-control" value="{{ approve_sheet.tapd_url }}"
                                            readonly>
                                 </div>
@@ -40,9 +57,35 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <span style="color: red;">*</span><label>&nbsp;SQL (若有SQL需要执行，请让DBA执行后再发布)</label>
-                                    <textarea type="text" class="form-control" id="sql"
-                                              rows="5" readonly>{{ approve_sheet.sql }}</textarea>
+                                    <span style="color: red;">*</span><label>&nbsp;是否code review</label>
+                                    <div>
+                                        <label>
+                                            <input type="radio" value="1" id="if_review1"
+                                                   name="if_review" {% if approve_sheet.if_review == '1' %}checked=""{% endif %}>&nbsp;是
+                                        </label>
+                                        &nbsp; &nbsp; &nbsp; &nbsp;
+                                        <label>
+                                            <input type="radio" value="2" id="if_review2"
+                                                   name="if_review" {% if approve_sheet.if_review == '2' %}checked=""{% endif %}>&nbsp;否
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <span style="color: red;">*</span><label>&nbsp;code review 人</label>
+                                    <input type="text" class="form-control" value="{{ approve_sheet.services }}"
+                                           readonly>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <span style="color: red;">*</span><label>&nbsp;TAPD URL</label>
+                                    <textarea type="text" class="form-control" rows="5"
+                                              readonly>{{ approve_sheet.tapd_url }}</textarea>
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -55,22 +98,93 @@
                             </div>
                         </div>
 
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <span style="color: red;">*</span><label>&nbsp;事前SQL</label>
+                                    <textarea type="text" class="form-control" rows="5"
+                                              readonly>{{ approve_sheet.sql_before }}</textarea>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <span style="color: red;">*</span><label>&nbsp;事后SQL</label>
+                                    <textarea type="text" class="form-control" id="consul_key"
+                                              rows="5" readonly>{{ approve_sheet.sql_after }}</textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>&nbsp;备注</label>
+                                    <textarea type="text" class="form-control" rows="5"
+                                              readonly>{{ approve_sheet.comment }}</textarea>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>&nbsp;紧急发布原因</label>
+                                    <textarea type="text" class="form-control" id="consul_key"
+                                              rows="5" readonly>{{ approve_sheet.reason }}</textarea>
+                                </div>
+                            </div>
+                        </div>
+
 
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <span style="color: red;">*</span><label>&nbsp;发布日期</label>
-                                    <input type="text" class="form-control" value="{{ approve_sheet.publish_date }}"
-                                           readonly>
+                                    <span style="color: red;">*</span><label>&nbsp;是否影响用户浏览（首页，搜索，详情页等）</label>
+                                    <div>
+                                        <label>
+                                            <input type="radio" value="2" id="if_browse1"
+                                                   name="if_browse" {% if approve_sheet.if_browse == '1' %}checked=""{% endif %}>&nbsp;是
+                                        </label>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;
+                                        <label>
+                                            <input type="radio" value="1" id="if_browse2"
+                                                   name="if_browse"{% if approve_sheet.if_browse == '2' %}checked=""{% endif %}>&nbsp;否
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <span style="color: red;">*</span><label>&nbsp;开始发布时间</label>
-                                    <input type="text" class="form-control" value="{{ approve_sheet.publish_time }}"
-                                           readonly>
+                                    <span style="color: red;">*</span><label>&nbsp;是否影响订单流程（注册登录，购物车，订单，支付等）</label>
+                                    <div>
+                                        <label>
+                                            <input type="radio" value="2" id="if_order1"
+                                                   name="if_order" {% if approve_sheet.if_order == '1' %}checked=""{% endif %}>&nbsp;是
+                                        </label>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;
+                                        <label>
+                                            <input type="radio" value="1" id="if_order2"
+                                                   name="if_order" {% if approve_sheet.if_order == '2' %}checked=""{% endif %}>&nbsp;否
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <span style="color: red;">*</span><label>&nbsp;是否影响履单流程（采购分配，提交发货，卖家订单处理等）</label>
+                                    <div>
+                                        <label>
+                                            <input type="radio" value="2" id="if_buy1"
+                                                   name="if_buy" {% if approve_sheet.if_buy == '1' %}checked=""{% endif %}>&nbsp;是
+                                        </label>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;
+                                        <label>
+                                            <input type="radio" value="1" id="if_buy2"
+                                                   name="if_buy" {% if approve_sheet.if_buy == '2' %}checked=""{% endif %}>&nbsp;否
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
 
                         <br>
@@ -101,10 +215,10 @@
                 <i class="fa fa-check modal-icon" style="color: #1AB394"></i>
                 <h4 class="modal-title" id="minion_old">同意发布</h4>
             </div>
-{#            <div class="modal-body" id="refuse_reason_modal">#}
-{#                <label>&nbsp;提醒发布人的注意事项（选填）</label>#}
-{#                <textarea type="text" class="form-control" id="agree_text" rows="5"></textarea>#}
-{#            </div>#}
+            {#            <div class="modal-body" id="refuse_reason_modal">#}
+            {#                <label>&nbsp;提醒发布人的注意事项（选填）</label>#}
+            {#                <textarea type="text" class="form-control" id="agree_text" rows="5"></textarea>#}
+            {#            </div>#}
             <div class="modal-footer">
                 <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
                 <button type="button" class="btn btn-primary" onclick="agreeButton('{{ approve_sheet.id }}')">同意
