--- a/templates/approve/approve_sheet_detail.html
+++ b/templates/approve/approve_sheet_detail.html
@@ -302,11 +302,8 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
-        {% if content.can_delete == '1' or content.approve_level == '1' %}
-            <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="delete_publishsheet('{{ content.id }}')">删除</button>
-        {% endif %}
-        {% if content.can_publish == '1' %}
-            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="start_publish('{{ content.id }}')">确认发布</button>
+        {% if content.can_approve == '1' %}
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="approveSheet('{{ content.id }}')">审批</button>
         {% endif %}
     </div>
 
