--- a/templates/publish/publish_sheets.html
+++ b/templates/publish/publish_sheets.html
@@ -13,17 +13,14 @@
 
             <ul class="sortable-list connectList agile-list ui-sortable" id="to_be_approved">
                 {% for sheet in tobe_approved_list %}
-                    <li class="info-element" id="{{ sheet.id }}">
-                        <a class="close-li pull-right"
-                           style="color: #c4c4c4"
-                           href="javascript: void(0);"
-                           data-toggle="modal" data-target="#deleteSheetModal"><i
-                                class="fa fa-times"></i></a>
+                    <li class="info-element" id="{{ sheet.id }}" data-toggle="modal" data-target="#publishDetailModal"
+                        onclick="publish_sheet_detail('{{ sheet.id }}', '1')">
                         <i class="fa fa-clock-o"></i> {{ sheet.publish_date }} {{ sheet.publish_time }}<br>
                         创建人：{{ sheet.creator }}<br>
                         项目：{{ sheet.gogroup }}<br>
                         环境：{{ sheet.env }}<br>
                         重启服务：{{ sheet.services_str }}<br>
+                        TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
                             审批级别：<span>{{ sheet.level }}</span><br>
@@ -36,49 +33,23 @@
                             二级审批人：<span>{{ sheet.second_str }}</span><br>
                         {% endif %}
 
-                        TAPD URL：{{ sheet.tapd_url }}<br>
-                        SQL：{{ sheet.sql }}<br>
-                        CONSUL KEY：{{ sheet.consul_key }}
+
+                        {#                        事前SQL：{{ sheet.sql_before }}<br>#}
+                        {#                        事后SQL：{{ sheet.sql_after }}<br>#}
+                        {#                        CONSUL KEY：{{ sheet.consul_key }}#}
                     </li>
-                    <div class="modal inmodal fade" id="deleteSheetModal" tabindex="-1"
-                         role="dialog"
-                         aria-labelledby="addModalLabel"
-                         aria-hidden="true">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content animated fadeIn">
-                                <div class="modal-header">
-                                    <button type="button" class="close"
-                                            data-dismiss="modal"><span
-                                            aria-hidden="true">×</span><span
-                                            class="sr-only">Close</span></button>
-                                    <i class="fa fa-times modal-icon"
-                                       style="color: red"></i>
-                                    <h4 class="modal-title" id="minion_old">确认删除</h4>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-white"
-                                            data-dismiss="modal">关闭
-                                    </button>
-                                    <button type="button" class="btn btn-danger" data-dismiss="modal"
-                                            id="deleteSheetButton"
-                                            onclick="delete_publishsheet('{{ sheet.id }}')">删除
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 {% endfor %}
 
             </ul>
-{#            <ul class="pager">#}
-{#                {% if tobe_approved_list.has_previous %}#}
-{#                    <li><a href="?page1={{ tobe_approved_list.previous_page_number }}">Previous</a></li>#}
-{#                {% endif %}#}
-{#                <li>Page {{ tobe_approved_list.number }} of {{ tobe_approved_list.paginator.num_pages }}.</li>#}
-{#                {% if tobe_approved_list.has_next %}#}
-{#                    <li><a href="?page1={{ tobe_approved_list.next_page_number }}">Next</a></li>#}
-{#                {% endif %}#}
-{#            </ul>#}
+            {#            <ul class="pager">#}
+            {#                {% if tobe_approved_list.has_previous %}#}
+            {#                    <li><a href="?page1={{ tobe_approved_list.previous_page_number }}">Previous</a></li>#}
+            {#                {% endif %}#}
+            {#                <li>Page {{ tobe_approved_list.number }} of {{ tobe_approved_list.paginator.num_pages }}.</li>#}
+            {#                {% if tobe_approved_list.has_next %}#}
+            {#                    <li><a href="?page1={{ tobe_approved_list.next_page_number }}">Next</a></li>#}
+            {#                {% endif %}#}
+            {#            </ul>#}
 
         </div>
     </div>
@@ -93,12 +64,14 @@
             <ul class="sortable-list connectList agile-list ui-sortable"
                 id="approve_refused">
                 {% for sheet in approve_refused_list %}
-                    <li class="danger-element">
+                    <li class="danger-element" data-toggle="modal" data-target="#publishDetailModal"
+                        onclick="publish_sheet_detail('{{ sheet.id }}')">
                         <i class="fa fa-clock-o"></i> {{ sheet.publish_date }} {{ sheet.publish_time }}<br>
                         创建人：{{ sheet.creator }}<br>
                         项目：{{ sheet.gogroup }}<br>
                         环境：{{ sheet.env }}<br>
                         重启服务：{{ sheet.services_str }}<br>
+                        TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
                             审批级别：<span>{{ sheet.level }}</span><br>
@@ -111,26 +84,26 @@
                             二级审批人：<span>{{ sheet.second_str }}</span><br>
                         {% endif %}
 
-                        TAPD URL：{{ sheet.tapd_url }}<br>
-                        SQL：{{ sheet.sql }}<br>
-                        CONSUL KEY：{{ sheet.consul_key }}<br>
-                        <div class="agile-detail">
-                            <a data-toggle="modal" data-target="#sheetRefuseReasonModal"
-                               class="pull-right btn btn-xs btn-danger"
-                               onclick="sheetRefuseReasonDetail('{{ sheet.id }}')">原因</a>
-                        </div>
+                        {#                        事前SQL：{{ sheet.sql_before }}<br>#}
+                        {#                        事后SQL：{{ sheet.sql_after }}<br>#}
+                        {#                        CONSUL KEY：{{ sheet.consul_key }}<br>#}
+                        {#                        <div class="agile-detail">#}
+                        {#                            <a data-toggle="modal" data-target="#sheetRefuseReasonModal"#}
+                        {#                               class="pull-right btn btn-xs btn-danger"#}
+                        {#                               onclick="sheetRefuseReasonDetail('{{ sheet.id }}')">原因</a>#}
+                        {#                        </div>#}
                     </li>
                 {% endfor %}
             </ul>
-{#            <ul class="pager">#}
-{#                {% if approve_refused_list.has_previous %}#}
-{#                    <li><a href="?page2={{ approve_refused_list.previous_page_number }}">Previous</a></li>#}
-{#                {% endif %}#}
-{#                <li>Page {{ approve_refused_list.number }} of {{ approve_refused_list.paginator.num_pages }}.</li>#}
-{#                {% if approve_refused_list.has_next %}#}
-{#                    <li><a href="?page2={{ approve_refused_list.next_page_number }}">Next</a></li>#}
-{#                {% endif %}#}
-{#            </ul>#}
+            {#            <ul class="pager">#}
+            {#                {% if approve_refused_list.has_previous %}#}
+            {#                    <li><a href="?page2={{ approve_refused_list.previous_page_number }}">Previous</a></li>#}
+            {#                {% endif %}#}
+            {#                <li>Page {{ approve_refused_list.number }} of {{ approve_refused_list.paginator.num_pages }}.</li>#}
+            {#                {% if approve_refused_list.has_next %}#}
+            {#                    <li><a href="?page2={{ approve_refused_list.next_page_number }}">Next</a></li>#}
+            {#                {% endif %}#}
+            {#            </ul>#}
         </div>
     </div>
 </div>
@@ -144,12 +117,24 @@
             <ul class="sortable-list connectList agile-list ui-sortable"
                 id="approve_passed">
                 {% for sheet in approve_passed_list %}
-                    <li class="warning-element">
+                    <li {% if sheet.can_publish %}
+                        class="success-element"
+                    {% else %}
+                        class="warning-element"
+                    {% endif %}
+                        data-toggle="modal" data-target="#publishDetailModal"
+                            {% if sheet.can_publish %}
+                        onclick="sheet_detail('{{ sheet.id }}')"
+                            {% else %}
+                        onclick="publish_sheet_detail('{{ sheet.id }}')"
+                            {% endif %}
+                    >
                         <i class="fa fa-clock-o"></i> {{ sheet.publish_date }} {{ sheet.publish_time }}<br>
                         创建人：{{ sheet.creator }}<br>
                         项目：{{ sheet.gogroup }}<br>
                         环境：{{ sheet.env }}<br>
                         重启服务：{{ sheet.services_str }}<br>
+                        TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
                             审批级别：<span>{{ sheet.level }}</span><br>
@@ -162,35 +147,35 @@
                             二级审批人：<span>{{ sheet.second_str }}</span><br>
                         {% endif %}
 
-                        TAPD URL：{{ sheet.tapd_url }}<br>
-                        SQL：{{ sheet.sql }}<br>
-                        CONSUL KEY：{{ sheet.consul_key }}<br>
+                        {#                        事前SQL：{{ sheet.sql_before }}<br>#}
+                        {#                        事后SQL：{{ sheet.sql_after }}<br>#}
+                        {#                        CONSUL KEY：{{ sheet.consul_key }}<br>#}
 
-                        {% if sheet.can_publish %}
-                            <div class="agile-detail">
-                                <a data-toggle="modal" data-target="#publishModal"
-                                   class="pull-right btn btn-xs btn-warning"
-                                   onclick="sheet_detail('{{ sheet.id }}')">发布</a>
-                            </div>
-                        {% else %}
-                            <div class="agile-detail">
-                                <a data-toggle="modal" data-target="#publishModal"
-                                   class="pull-right btn btn-xs btn-warning"
-                                   onclick="sheet_detail('{{ sheet.id }}')" disabled="">发布</a>
-                            </div>
-                        {% endif %}
+                        {#                        {% if sheet.can_publish %}#}
+                        {#                            <div class="agile-detail">#}
+                        {#                                <a data-toggle="modal" data-target="#publishModal"#}
+                        {#                                   class="pull-right btn btn-xs btn-warning"#}
+                        {#                                   onclick="sheet_detail('{{ sheet.id }}')">发布</a>#}
+                        {#                            </div>#}
+                        {#                        {% else %}#}
+                        {#                            <div class="agile-detail">#}
+                        {#                                <a data-toggle="modal" data-target="#publishModal"#}
+                        {#                                   class="pull-right btn btn-xs btn-warning"#}
+                        {#                                   onclick="sheet_detail('{{ sheet.id }}')" disabled="">发布</a>#}
+                        {#                            </div>#}
+                        {#                        {% endif %}#}
                     </li>
                 {% endfor %}
             </ul>
-{#            <ul class="pager">#}
-{#                {% if approve_passed_list.has_previous %}#}
-{#                    <li><a href="?page3={{ approve_passed_list.previous_page_number }}">Previous</a></li>#}
-{#                {% endif %}#}
-{#                <li>Page {{ approve_passed_list.number }} of {{ approve_passed_list.paginator.num_pages }}.</li>#}
-{#                {% if approve_passed_list.has_next %}#}
-{#                    <li><a href="?page3={{ approve_passed_list.next_page_number }}">Next</a></li>#}
-{#                {% endif %}#}
-{#            </ul>#}
+            {#            <ul class="pager">#}
+            {#                {% if approve_passed_list.has_previous %}#}
+            {#                    <li><a href="?page3={{ approve_passed_list.previous_page_number }}">Previous</a></li>#}
+            {#                {% endif %}#}
+            {#                <li>Page {{ approve_passed_list.number }} of {{ approve_passed_list.paginator.num_pages }}.</li>#}
+            {#                {% if approve_passed_list.has_next %}#}
+            {#                    <li><a href="?page3={{ approve_passed_list.next_page_number }}">Next</a></li>#}
+            {#                {% endif %}#}
+            {#            </ul>#}
         </div>
     </div>
 </div>
@@ -217,11 +202,19 @@
         </div>
     </div>
 </div>
+{##}
+{#<div class="modal inmodal fade" id="publishModal" tabindex="-1" role="dialog"#}
+{#     aria-labelledby="addModalLabel"#}
+{#     aria-hidden="true">#}
+{#    <div class="modal-dialog modal-lg" id="sheet_modal">#}
+{##}
+{#    </div>#}
+{#</div>#}
 
-<div class="modal inmodal fade" id="publishModal" tabindex="-1" role="dialog"
+<div class="modal inmodal fade" id="publishDetailModal" tabindex="-1" role="dialog"
      aria-labelledby="addModalLabel"
      aria-hidden="true">
-    <div class="modal-dialog modal-lg" id="sheet_modal">
+    <div class="modal-dialog modal-lg" id="sheet_detail_modal">
 
     </div>
 </div>
