--- a/templates/publish/template_list.html
+++ b/templates/publish/template_list.html
@@ -116,14 +116,14 @@
                         <p>【{{ timeslot.get_is_global_display }}】<a class="close-li pull-right" style="color: #c4c4c4"
                                                                     href="javascript: void(0);"
                                                                     data-toggle="modal"
-                                                                    data-target="#deleteTemplateModal"><i
+                                                                    data-target="#deleteTemplateModal_{{ timeslot.id }}"><i
                                 class="fa fa-times"></i></a></p>
                         <p>{{ timeslot.approval_level.get_name_display }} : {{ timeslot.get_start_of_week_display }}
                             ~ {{ timeslot.get_end_of_week_display }}&nbsp;&nbsp;&nbsp;&nbsp;{{ timeslot.start_time }}
                             ~ {{ timeslot.end_time }}</p>
                         <p>创建人：{{ timeslot.creator.username }}</p>
                     </li>
-                    <div class="modal inmodal fade" id="deleteTemplateModal" tabindex="-1"
+                    <div class="modal inmodal fade" id="deleteTemplateModal_{{ timeslot.id }}" tabindex="-1"
                          role="dialog"
                          aria-labelledby="addModalLabel"
                          aria-hidden="true">
